packages/wallet/wallet-infra/guides/kube_samples/wallet.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-infra

  labels:
    app: wallet-infra
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: wallet-infra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-infra

  labels:
    app: wallet-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-infra
  template:
    metadata:
      labels:
        app: wallet-infra
    spec:
      automountServiceAccountToken: false
      containers:
      - name: wallet-infra
        image: your-registry/wallet-infra:2.0.1 # Replace with your container registry path and version
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
            ephemeral-storage: "1Gi"
          limits:
            cpu: 500m
            memory: 512Mi
            ephemeral-storage: "2Gi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # Add your SSL certificate configuration here
    external-dns.alpha.kubernetes.io/hostname: "store.example.com"
spec:
  ingressClassName: alb
  rules:
  - host: store.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wallet-infra
            port:
              number: 80
